@@ -63,8 +63,8 @@ label.label-phone-number-country {
 }
 
 .reportSettingsForm td {
-    height       : 50px;
-    padding-left : 120px;
+    height : 50px;
+    width  : 120px;
 }
 
 .reportSettingsForm .description {
