@@ -211,12 +211,14 @@ tr.lowProfitDevice td {
 .replacementDevices td.thresholdDanger {
     background-color : #FF0C36;
 }
+
 table.summaryReport {
-    border-collapse: collapse;
-    width: 100%;
+    border-collapse : collapse;
+    width           : 100%;
 }
-.summaryReport th{
-    background-color: #ACC7D3;
+
+.summaryReport th {
+    background-color : #ACC7D3;
 }
 
 .deviceSwapList .subHeader {
@@ -248,10 +250,10 @@ table.summaryReport {
 }
 
 #replacementDeviceTable td.negativeCostDelta {
-     font-weight      : bold;
-     color            : white;
-     background-color : red;
- }
+    font-weight      : bold;
+    color            : white;
+    background-color : red;
+}
 
 #replacementDeviceTable td.positiveCostDelta {
     font-weight      : normal;
@@ -262,7 +264,8 @@ table.summaryReport {
 #navigationMenu {
     margin-bottom : 0;
 }
+
 select.tonerMultiselect {
-    width: 550px;
-    height: 100px;
+    width  : 600px;
+    height : 100px;
 }
